@@ -125,6 +125,8 @@ class MailinDispatcher(object):
         targets = []
         to = self.getAddrList(message, 'To')
         to = to + self.getAddrList(message, 'Cc')
+        # Include BCC'ed targets
+        to = to + self.getAddrList(message, 'X-Original-To')
         info = {
             'to': to,
             'targets': targets,
